@@ -1,5 +1,9 @@
 2012-05-23  Paul Eggert  <eggert@cs.ucla.edu>
 
+	mktime: avoid signed integer overflow
+	* time/mktime.c (__mktime_internal): Do not mishandle the case
+	where diff == INT_MIN.
+
 	mktime: simplify computation of average
 	* time/mktime.c (ranged_convert): Use new time_t_avg function
 	instead of rolling our own (probably-slower) code.
